# ArduinoJson

./: .clang-format  .clang-tidy  .gitignore  .mbedignore  .travis.yml  ArduinoJson.cpp  ArduinoJson.h  ArduinoJson.sln  ArduinoJsonParser.cpp  ArduinoJsonParser.h  BuildArduinoPackage.sh  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FixEndOfFile.sh  JsonArray.cpp  JsonArray.h  JsonGenerator.cpp  JsonGenerator.h  JsonHashTable.cpp  JsonHashTable.h  JsonObjectBase.cpp  JsonObjectBase.h  JsonParser.cpp  JsonParser.h  LICENSE  LICENSE.md  LICENSE.txt  README.md  SUPPORT.md  appveyor.yml  component.mk  idf_component.yml  keywords.txt  library.json  library.properties  mos.yml  msgpack.org.md
extras/fuzzing/: CMakeLists.txt  Makefile  fuzzer_main.cpp  json_fuzzer.cpp  msgpack_fuzzer.cpp  reproducer.cpp
extras/tests/: .clang-tidy  CMakeLists.txt
src/: ArduinoJson.h  ArduinoJson.hpp  CMakeLists.txt  DynamicJsonBuffer.cpp  JsonArray.cpp  JsonBuffer.cpp  JsonContainer.cpp  JsonObject.cpp  JsonPrintable.cpp  JsonValue.cpp  JsonVariant.cpp
src/Arduino/: Print.cpp  String.cpp
src/ArduinoJson/: .directory  Configuration.hpp  DynamicJsonArray.hpp  DynamicJsonBuffer.hpp  DynamicJsonDocument.hpp  DynamicJsonObject.hpp  DynamicJsonVariant.hpp  JsonArray.hpp  JsonArrayData.hpp  JsonArrayImpl.hpp  JsonArrayIterator.hpp  JsonArraySubscript.hpp  JsonBuffer.hpp  JsonBufferBase.hpp  JsonBufferImpl.hpp  JsonDocument.hpp  JsonError.hpp  JsonKey.hpp  JsonObject.hpp  JsonObjectData.hpp  JsonObjectImpl.hpp  JsonObjectIterator.hpp  JsonObjectSubscript.hpp  JsonPair.hpp  JsonVariant.hpp  JsonVariantBase.hpp  JsonVariantCasts.hpp  JsonVariantComparisons.hpp  JsonVariantImpl.hpp  JsonVariantOr.hpp  JsonVariantSubscripts.hpp  Namespace.hpp  RawJson.hpp  SerializedValue.hpp  StaticJsonArray.hpp  StaticJsonBuffer.hpp  StaticJsonDocument.hpp  StaticJsonObject.hpp  StaticJsonVariant.hpp  Visitable.hpp  (+4 more)
src/Internals/: Comments.cpp  CompactJsonWriter.cpp  Encoding.cpp  EscapedString.cpp  IndentedPrint.cpp  JsonArrayImpl.cpp  JsonNode.cpp  JsonObjectImpl.cpp  JsonParser.cpp  JsonValueImpl.cpp  JsonWriter.cpp  List.cpp  PrettyJsonWriter.cpp  Prettyfier.cpp  QuotedString.cpp  StaticStringBuilder.cpp  StringBuilder.cpp
test/: ArduinoString_Tests.cpp  CMakeLists.txt  DynamicJsonBuffer_Array_Tests.cpp  DynamicJsonBuffer_Basic_Tests.cpp  DynamicJsonBuffer_NoMemory_Tests.cpp  DynamicJsonBuffer_Object_Tests.cpp  DynamicJsonBuffer_String_Tests.cpp  EscapedStringTests.cpp  EscapedString_PrintTo_Tests.cpp  GbathreeBug.cpp  IntegrationTests.cpp  Issue10.cpp  Issue104.cpp  Issue214.cpp  Issue34.cpp  Issue67.cpp  Issue90.cpp  JsonArray_Add_Tests.cpp  JsonArray_Basic_Tests.cpp  JsonArray_Container_Tests.cpp  JsonArray_CopyFrom_Tests.cpp  JsonArray_CopyTo_Tests.cpp  JsonArray_Invalid_Tests.cpp  JsonArray_Iterator_Tests.cpp  JsonArray_PrettyPrintTo_Tests.cpp  JsonArray_PrintTo_Tests.cpp  JsonArray_Remove_Tests.cpp  JsonArray_Set_Tests.cpp  JsonArray_Subscript_Tests.cpp  JsonObject_Basic_Tests.cpp  JsonObject_Container_Tests.cpp  JsonObject_ContainsKey_Tests.cpp  JsonObject_Get_Tests.cpp  JsonObject_Invalid_Tests.cpp  JsonObject_Iterator_Tests.cpp  JsonObject_PrettyPrintTo_Tests.cpp  JsonObject_PrintTo_Tests.cpp  JsonObject_Remove_Tests.cpp  JsonObject_Serialization_Tests.cpp  JsonObject_Set_Tests.cpp  (+47 more)
test/DynamicJsonBuffer/: CMakeLists.txt  alloc.cpp  array.cpp  basics.cpp  createArray.cpp  createObject.cpp  no_memory.cpp  object.cpp  size.cpp  startString.cpp  strdup.cpp
test/DynamicMemoryPool/: CMakeLists.txt  StringBuilder.cpp  alloc.cpp  allocSlot.cpp  allocString.cpp  allocVariant.cpp  blocks.cpp  clear.cpp  no_memory.cpp  size.cpp  startString.cpp
test/ElementProxy/: CMakeLists.txt  add.cpp  remove.cpp  set.cpp  size.cpp
test/IntegrationTests/: CMakeLists.txt  gbathree.cpp  issue772.cpp  round_trip.cpp
test/JsonArray/: CMakeLists.txt  add.cpp  basics.cpp  copyFrom.cpp  copyTo.cpp  createNested.cpp  equals.cpp  get.cpp  invalid.cpp  isNull.cpp  iterator.cpp  memoryUsage.cpp  nesting.cpp  prettyPrintTo.cpp  printTo.cpp  remove.cpp  removeAt.cpp  set.cpp  size.cpp  std_string.cpp  subscript.cpp  undefined.cpp
test/JsonBuffer/: CMakeLists.txt  nested.cpp  nestingLimit.cpp  parse.cpp  parseArray.cpp  parseObject.cpp
test/JsonDeserializer/: CMakeLists.txt  DeserializationError.cpp  JsonError.cpp  deserializeJsonArray.cpp  deserializeJsonArrayStatic.cpp  deserializeJsonObject.cpp  deserializeJsonObjectStatic.cpp  deserializeJsonString.cpp  deserializeJsonValue.cpp  input_types.cpp  invalid_input.cpp  misc.cpp  nestingLimit.cpp  number.cpp  object.cpp  object_static.cpp  std_istream.cpp  std_string.cpp
test/JsonDocument/: CMakeLists.txt  DynamicJsonDocument.cpp  StaticJsonDocument.cpp  add.cpp  createNested.cpp  isNull.cpp  nesting.cpp  subscript.cpp
test/JsonObject/: CMakeLists.txt  basics.cpp  containsKey.cpp  copy.cpp  createNestedArray.cpp  createNestedObject.cpp  equals.cpp  get.cpp  getWithDefaultValue.cpp  invalid.cpp  is.cpp  isNull.cpp  iterator.cpp  memoryUsage.cpp  nesting.cpp  prettyPrintTo.cpp  printTo.cpp  remove.cpp  set.cpp  size.cpp  std_string.cpp  subscript.cpp
test/JsonParser/: CMakeLists.txt  DynamicJsonArray.cpp  DynamicJsonObject.cpp  DynamicJsonVariant.cpp  JsonArray.cpp  JsonError.cpp  JsonObject.cpp  JsonVariant.cpp  StaticJsonArray.cpp  StaticJsonObject.cpp  StaticJsonVariant.cpp  nestingLimit.cpp
tests/: ArduinoJsonParserTests.sln  ArduinoJsonParserTests.vcxproj  ArduinoJsonParserTests.vcxproj.filters  CMakeLists.txt  DummyTests.cpp  EscapedStringTests.cpp  Issue10.cpp  JsonArray_Container_Tests.cpp  JsonArray_Parser_Tests.cpp  JsonArray_PrettyPrintTo_Tests.cpp  JsonArray_PrintTo_Tests.cpp  JsonArray_Serialization_Tests.cpp  JsonObjectSerializationTests.cpp  JsonObjectTests.cpp  JsonObject_Container_Tests.cpp  JsonObject_PrettyPrintTo_Tests.cpp  JsonObject_Serialization_Tests.cpp  JsonValueTests.cpp  StaticJsonBufferTests.cpp  StringBuilderTests.cpp  TestArrayExample.cpp  TestArrays.cpp  TestGbathreeStrings.cpp  TestHashTableExample.cpp  tests.vcxproj  tests.vcxproj.filters
(+1279 files in other folders)
